--- a/iOS-CustomControls/iOS-CustomControls/Base.lproj/Main.storyboard
+++ b/iOS-CustomControls/iOS-CustomControls/Base.lproj/Main.storyboard
@@ -30,10 +30,28 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y29-nV-VSR" customClass="CustomControl" customModule="iOS_CustomControls" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="iqO-ux-8UF"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="y29-nV-VSR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I1z-A5-wSM"/>
+                            <constraint firstItem="y29-nV-VSR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="Uzm-IM-agR"/>
+                            <constraint firstItem="y29-nV-VSR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="f4n-9C-Hbu"/>
+                            <constraint firstItem="y29-nV-VSR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="296" id="hPB-uS-kkz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="snt-KU-6Jq"/>
+                    <connections>
+                        <outlet property="customControl" destination="y29-nV-VSR" id="NcS-m5-wT6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
