MVP and stretch

--- a/CustomControls/CustomControls/Base.lproj/Main.storyboard
+++ b/CustomControls/CustomControls/Base.lproj/Main.storyboard
@@ -10,20 +10,20 @@
         <!--User Rating: N Stars-->
         <scene sceneID="w01-jX-ODO">
             <objects>
-                <viewController title="User Rating: N Stars" id="sVx-Q9-H3o" sceneMemberID="viewController">
+                <viewController title="User Rating: N Stars" id="sVx-Q9-H3o" customClass="ViewController" customModule="CustomControls" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TYh-ht-3Mv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kmn-TQ-FlY" customClass="CustomControl" customModule="CustomControls" customModuleProvider="target">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kmn-TQ-FlY" customClass="CustomControl" customModule="CustomControls" customModuleProvider="target">
+                                <rect key="frame" x="83" y="428" width="248" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
-                                    <action selector="updateRating:" destination="WtR-dA-kYc" eventType="valueChanged" id="QJ0-8t-q1l"/>
+                                    <action selector="updateRating:" destination="sVx-Q9-H3o" eventType="valueChanged" id="ALL-kL-Au9"/>
                                 </connections>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="kmn-TQ-FlY" firstAttribute="centerY" secondItem="TYh-ht-3Mv" secondAttribute="centerY" id="Rsx-Ae-Yye"/>
                             <constraint firstItem="kmn-TQ-FlY" firstAttribute="centerX" secondItem="TYh-ht-3Mv" secondAttribute="centerX" id="mSZ-SK-4Fa"/>
@@ -33,7 +33,6 @@
                     <navigationItem key="navigationItem" id="oG0-Es-vIs"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xuw-ub-OVB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="WtR-dA-kYc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1691.304347826087" y="1.3392857142857142"/>
         </scene>
@@ -45,6 +44,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dhT-da-kMe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
