--- a/CustomControls/CustomControls/Base.lproj/Main.storyboard
+++ b/CustomControls/CustomControls/Base.lproj/Main.storyboard
@@ -14,12 +14,26 @@
                     <view key="view" contentMode="scaleToFill" id="prm-02-DXP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jFv-NX-Un9" customClass="CustomControl" customModule="CustomControls" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="Sqn-mP-k2T" eventType="valueChanged" id="LRG-P5-2Ih"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jFv-NX-Un9" firstAttribute="centerX" secondItem="prm-02-DXP" secondAttribute="centerX" id="2D2-PO-ni2"/>
+                            <constraint firstItem="jFv-NX-Un9" firstAttribute="centerY" secondItem="prm-02-DXP" secondAttribute="centerY" id="gLc-Wg-z4C"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1VD-IZ-FWB"/>
                     </view>
                     <navigationItem key="navigationItem" id="AtE-l4-CAV"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MLV-m9-QDa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="Sqn-mP-k2T" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1400" y="-219.64285714285714"/>
         </scene>
