added custom control class

--- a/CustomControlsAP/CustomControlsAP/Base.lproj/Main.storyboard
+++ b/CustomControlsAP/CustomControlsAP/Base.lproj/Main.storyboard
@@ -14,7 +14,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s4B-6b-NHw" customClass="CustomControl" customModule="CustomControlsAP" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="Uav-ET-tw9"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="s4B-6b-NHw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QNG-OB-j2D"/>
+                            <constraint firstItem="s4B-6b-NHw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RCD-2I-lgS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="oLD-X5-NRu"/>
